--- a/Take It All (Full Mod)/mod.ini
+++ b/Take It All (Full Mod)/mod.ini
@@ -7,7 +7,7 @@ Author="Radical Rave, Zakkujo"
 AuthorURL=""
 
 [Main]
-UpdateServer=""
+UpdateServer="https://raw.githubusercontent.com/RadicalRave/Take-It-All-Mod-Pack-Update-Server/main/Take%20It%20All%20(Full%20Mod)"
 SaveFile=""
 ID=""
 IncludeDir0="."
