--- a/Take It All (Full Mod)/mod.ini
+++ b/Take It All (Full Mod)/mod.ini
@@ -1,15 +1,15 @@
 [Desc]
-Title="Take It All (Full Mod Pack)"
-Description="This mod contains 3 things. An instrumental mix of Take it All over I'm Here, A version of Take it All in the JukeBox, and an intro piece for the main menu."
-Version=1.0
-Date="2023-04-25"
 Author="Radical Rave, Zakkujo"
+Title="Take It All (Full Mod Pack)"
+Version=1.0
+Description="This Mod contains 3 things. An instrumental mix of Take it All over I'm Here, A version of Take it All in the music player, and an intro piece for the main menu."
+Date="2023-04-25"
 AuthorURL=""
 
 [Main]
 UpdateServer="https://raw.githubusercontent.com/RadicalRave/Take-It-All-Mod-Pack-Update-Server/main/Take%20It%20All%20(Full%20Mod)"
 SaveFile=""
-ID=""
+ID="C5766478"
 IncludeDir0="."
 IncludeDirCount=1
 DependsCount=0
