--- a/Take It All (Full Mod)/mod_version.ini
+++ b/Take It All (Full Mod)/mod_version.ini
@@ -1,6 +1,6 @@
 [Main]
-VersionString="1.0"
-DownloadSizeString="1.3 GB"
+VersionString="1.5"
+DownloadSizeString="35 KB"
 Markdown="changelog.md"
 [Changelog]
 StringCount=0
